--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h2>积分学</h2>
     <p>积分学研究的是区域的大小和累积效应。通过积分，我们可以计算曲线下的面积，了解函数在某一区间上的累积效果。</p>
 
-    <img src="D:\桌面\微积分.jpg" alt="微积分图示">
+    <img src="./微积分.jpg" alt="微积分图示">
 
 </body>
 </html>
